--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <div class="stats-display">
             <div class="winloss">
                 <div id='record'>
-                    <p id='wincount'>Wins: </p>
-                    <p id="losscount">Losses: </p>
+                    <p id='wincount'>Wins: 0</p>
+                    <p id="losscount">Losses: 0</p>
                 </div>
                 <div class="reset">
                     <button id="reset-button">RESET</button>
